--- a/20210921-MinaGuirguis-NYCSchools/View/Base.lproj/Main.storyboard
+++ b/20210921-MinaGuirguis-NYCSchools/View/Base.lproj/Main.storyboard
@@ -20,7 +20,7 @@
                                 <rect key="frame" x="0.0" y="81" width="414" height="781"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="120" id="lk8-te-GDg" customClass="SchoolCell" customModule="_0210921_MinaGuirguis_NYCSchools" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="SchoolCell" rowHeight="120" id="lk8-te-GDg" customClass="SchoolCell" customModule="_0210921_MinaGuirguis_NYCSchools" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="24.5" width="414" height="120"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="lk8-te-GDg" id="kbe-Bx-XJc">
